# renderer-test

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  makefile
.zed/: debug.json  tasks.json
cross/: windows-toolchain.cmake
include/: draw  font  io  macros  math  primitive  raytracer  rt
res/: minefont.tga  podfont.tga
src/: main.cpp
src/draw/: color.hpp  image.hpp  plane.hpp  text.hpp
src/font/: fonts.hpp
src/io/: io.hpp
src/math/: angle.hpp  matrix.hpp
src/primitive/: box.hpp  fixed.hpp  primitive.hpp
src/raytracer/: world.cpp  world.hpp
src/rt/: instance.hpp
unused/minecraft/: block.cpp  block.hpp  chunk.hpp  entity.cpp  entity.hpp  utility.hpp  world.hpp
unused/minecraft/chunk/: General.cppm  Generation.cppm
